[gd_scene load_steps=12 format=2]

[ext_resource path="res://Start.gd" type="Script" id=1]
[ext_resource path="res://assets/main-theme.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/Inconsolata-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/background.png" type="Texture" id=4]
[ext_resource path="res://assets/fire1.png" type="Texture" id=5]
[ext_resource path="res://assets/fire4.png" type="Texture" id=6]
[ext_resource path="res://assets/fire3.png" type="Texture" id=7]
[ext_resource path="res://assets/firelight.png" type="Texture" id=8]
[ext_resource path="res://assets/fire2.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Start" type="Node"]
script = ExtResource( 1 )

[node name="MainTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="AmbientShadow" type="CanvasModulate" parent="."]
color = Color( 0, 0, 0, 1 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 0, 10000, 10000 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="StartButton" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -86.0
margin_top = 99.1085
margin_right = 86.0
margin_bottom = 173.108
custom_fonts/font = SubResource( 1 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fire" type="Light2D" parent="."]
texture = ExtResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Fire"]
scale = Vector2( 2, 2 )
frames = SubResource( 2 )
frame = 3
playing = true

[node name="Camera2D" type="Camera2D" parent="Fire"]
position = Vector2( 0, -100 )
current = true

[node name="MusicDelayTimer" type="Timer" parent="."]
one_shot = true
[connection signal="pressed" from="CanvasLayer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MusicDelayTimer" to="." method="_on_MusicDelayTimer_timeout"]
